2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	Operators are identifiers.
	* src/parser/bison/ugrammar.y (id): New.
	* src/parser/bison/ugrammar.y, src/parser/bison/utoken.l
	(TOK_STAR_ASSIGN, TOK_DIV_ASSIGN): New.
	(TOK_MINUSMINUS, TOK_PLUSPLUS, TOK_PLUSASSIGN, TOK_MINUSASSIGN):
	Rename as...
	(TOK_MINUS_MINUS, TOK_PLUS_PLUS, TOK_PLUS_ASSIGN, TOK_MINUS_ASSIGN):
	these.
	* share/urbi/urbi.u: Use these new symbols to define these
	operators.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	Simplify ast/ast.mk.
	* src/ast/ast.mk: It is no longer needed to handle the special
	case of location.hh which is now a regular dependency.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	ast/ast.mk.
	* src/ast/Makefile.am: Rename as...
	* src/ast/ast.mk: this.
	Adjust to work as a file included by src/Makefile.am.
	* configure.ac, src/Makefile.am: Adjust.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Float.set.
	* src/object/float-class.cc (float_class_set): New.
	Remove support for in place arithmetics as primitives.
	* share/urbi/urbi.u (Float.+=, Float.-=, Float.*=)
	(Float./=): New.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	!.
	* src/object/object.hxx: Add missing !.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Atom::traits_type.
	* src/object/atom.hh (kind): New.
	(traits_type): Remove.
	Adjust dependencies.
	* src/object/object.hxx: Use libport::has.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Atom typedef.
	* src/object/atom.hh, src/object/atom.hxx (traits): Rename as...
	(traits_type): this.
	Adjust uses.
	(value_type, value_ref_type, value_set): New.
	Use it.
	* src/object/list-class.cc, src/object/object.hxx,
	* src/object/primitives.hh: Adjust.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	for loops.
	* src/parser/bison/ugrammar.y (new_flavor, for_loop): New.
	(for): Use it.
	* tests-local.mk: We pass for-loop from k1.

2007-10-09  Akim Demaille  <akim.demaille@free.fr>

	Don't expect Call& to always have a value.